# wisdom-layer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  markdownlint.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  scorecard.yml  test.yml
benchmarks/: fabrication_eval.md  independent_audit.md
docs/: api-reference.md  claude-agent-sdk.md  config.md  dashboard.md  integration-guide.md  langgraph.md  mcp.md  multi-agent-quickstart.md  openai-agents-sdk.md  openclaw.md  performance.md  quickstart.md  telemetry.md  tiers.md  troubleshooting.md
docs/concepts/: agent-archetypes.md  critic.md  directives.md  dream-cycles.md  memory-tiers.md  provenance.md
docs/migrations/: v1.2.0-fact-source-ids.md
examples/: basic_agent.py  claude_agent_sdk_quickstart.py  compounding_demo.py  critic_example.py  langgraph_quickstart.py  mcp_quickstart.py  memory_example.py  quickstart_cloud.py  quickstart_litellm.py  quickstart_local.py  quickstart_ollama.py
